# AMGX

./: .gitignore  .gitmodules  CHANGELIST  CHANGELOG  CMakeLists.txt  LICENSE  NOTICES  PluginConfig.txt  README.md  ReleaseVersion.txt
ci/: README.md  (+3 more)
core/: CMakeLists.txt
core/configs/: AGGREGATION_LOW_DEG_DILU.json  AGGREGATION_THRUST_DILU.json  AGGREGATION_THRUST_GS.json  AMG_AGGRREGATION_CG.json  AMG_CLASSICAL_AGGRESSIVE_L1.json  AMG_CLASSICAL_CG.json  AMG_CLASSICAL_PMIS.json  CG_DILU.json  CHEB_SOLVER_NOPREC.json  CLASSICAL_CGF_CYCLE.json  CLASSICAL_V_CYCLE.json  F.json  FGMRES.json  FGMRES_CLASSICAL_AGGRESSIVE_HMIS.json  FGMRES_NOPREC.json  GMRES.json  IDR_DILU.json  PBICGSTAB.json  PCGF_CLASSICAL_F_JACOBI.json  PCGF_CLASSICAL_V_JACOBI.json  PCGF_V.json  PCGF_W.json  PCG_AGGREGATION_JACOBI.json  PCG_CLASSICAL_F_JACOBI.json  PCG_CLASSICAL_W_JACOBI.json  PCG_V.json  PCG_W.json  V-cheby-aggres-L1-trunc-userLambda.json  V-cheby-aggres-L1-trunc.json  W.json
core/include/: core.h  matrix_analysis.h
core/src/: api_version.cu  core.cu  readers.cu  version.cu
core/tests/: aggregates_coarsening_factor.cu  aggregates_determinism_test.cu  aggregates_diagonal_outside_test.cu  amg_levels_reuse.cu  block_conversion.cu  classical_pmis.cu  eigensolver_test.cu  energymin_algorithm.cu  low_deg_determinism.cu  matrix_coloring_test.cu  object_destruction.cu  smoother_blocksizes.cu  smoother_cusparse.cu  template_test.cu
eigen_examples/: CMakeLists.txt  POWER_ITERATION  eigensolver.cu  eigensolver_mpi.c  eigensolver_mpi.cu
examples/: CMakeLists.txt  Makefile.cray  amgxP_c.h  amgxP_capi.h  amgx_capi.c  amgx_capi.h  amgx_capi_multi.c  amgx_mpi_capi.c  amgx_mpi_capi_agg.c  amgx_mpi_capi_cla.c  amgx_mpi_capi_multi.c  amgx_mpi_poisson5pt.c  amgx_mpi_poisson7.c  amgx_spmv_test.c  amgx_test_common.h  convert.c  eigensolver.c  eigensolver_mpi.c  generate_poisson.cu  generate_poisson7_dist_renum.cu  matrix.mtx
examples/amgx_spmv_example/: Makefile  amgx_spmv_distributed_internal.cu  amgx_spmv_internal.cu
examples/configs/: AGGREGATION_LOW_DEG_BJ.json  AGGREGATION_MULTI_PAIRWISE.json  AGGREGATION_THRUST_BJ.json  AGGREGATION_THRUST_GS.json  AMG_CLASSICAL_AGGRESSIVE_CHEB_L1_TRUNC.json  AMG_CLASSICAL_AGGRESSIVE_L1_TRUNC.json  AMG_CLASSICAL_L1_AGGRESSIVE_HMIS.json  AMG_CLASSICAL_L1_TRUNC.json  CHEB_SOLVER_NOPREC.json  CLASSICAL_F_CYCLE.json  CLASSICAL_V_CYCLE.json  CLASSICAL_W_CYCLE.json  FGMRES.json  FGMRES_AGGREGATION_JACOBI.json  FGMRES_CLASSICAL_AGGRESSIVE_PMIS.json  FGMRES_NOPREC.json  GMRES_AMG_D2.json  IDRMSYNC_DILU.json  JACOBI.json  PBICGSTAB_AGGREGATION_W_JACOBI.json  PCGF_CLASSICAL_V_JACOBI.json  PCG_AGGREGATION_JACOBI.json  PCG_CLASSICAL_F_JACOBI.json  PCG_CLASSICAL_V_JACOBI.json  PCG_V.json  V-cheby-aggres-L1-trunc.json  V-cheby-smoother.json  V-cheby_poly-smoother.json  V.json  W.json  agg_cheb4.json
examples/eigen_configs/: PAGERANK  SUBSPACE_ITERATION
examples/eigen_examples/: CMakeLists.txt  LANCZOS  eigensolver.c  eigensolver_mpi.c
examples/install_makefiles_mpi/: Makefile
examples/install_makefiles_nompi/: Makefile
src/: CMakeLists.txt  amg.cu  amg_config.cu  amg_eigensolver.cu  amg_level.cu  amg_signal.cu  amg_solver.cu  amgx_c.cu  amgx_c_common.cu  amgx_cublas.cu  amgx_cusolverDn.cu  amgx_cusparse.cu  amgx_eig_c.cu  amgx_lapack.cu  amgx_timer.cu  api_version.cu  auxdata.cu  blas.cu  core.cu  csr_multiply.cu  csr_multiply_detail.cu  csr_multiply_sm20.cu  csr_multiply_sm35.cu  csr_multiply_sm70.cu  determinism_checker.cu  device_properties.cu  eigensolvers.cu  error.cu  gaussian_elimination.cu  global_thread_handle.cu  hash_workspace.cu  logger.cu  matrix.cu  matrix_analysis.cu  matrix_io.cu  memory_info.cu  misc.cu  multiply.cu  norm.cu  profile.cu  (+11 more)
src/aggregation/: aggregation_amg_level.cu
src/amgx_types/: io.cu
src/classical/: classical_amg_level.cu
src/configs/: AGGREGATION_DILU.json  AGGREGATION_GS.json  AGGREGATION_LOW_DEG_GS.json  AGGREGATION_MULTI_PAIRWISE.json  AGGREGATION_THRUST_DILU.json  AGGREGATION_THRUST_GS.json  AMG_AGGRREGATION_CG.json  AMG_CLASSICAL_AGGRESSIVE_CHEB_L1_TRUNC.json  AMG_CLASSICAL_AGGRESSIVE_L1.json  AMG_CLASSICAL_AGGRESSIVE_L1_TRUNC.json  AMG_CLASSICAL_CG.json  AMG_CLASSICAL_CGF.json  AMG_CLASSICAL_L1_AGGRESSIVE_HMIS.json  AMG_CLASSICAL_L1_TRUNC.json  AMG_CLASSICAL_PMIS.json  CG_DILU.json  CHEB_SOLVER_NOPREC.json  CLASSICAL_CGF_CYCLE.json  CLASSICAL_CG_CYCLE.json  CLASSICAL_F_CYCLE.json  CLASSICAL_V_CYCLE.json  F.json  FGMRES.json  FGMRES_AGGREGATION.json  FGMRES_AGGREGATION_DILU.json  FGMRES_AGGREGATION_JACOBI.json  FGMRES_CLASSICAL_AGGRESSIVE_HMIS.json  FGMRES_CLASSICAL_AGGRESSIVE_PMIS.json  FGMRES_NOPREC.json  GMRES.json  GMRES_AMG_D2.json  IDRMSYNC_DILU.json  IDR_DILU.json  JACOBI.json  PBICGSTAB.json  PBICGSTAB_AGGREGATION_W_JACOBI.json  PBICGSTAB_CLASSICAL_JACOBI.json  PBICGSTAB_NOPREC.json  PBICGSTAB_W.json  PCGF_CLASSICAL_V_JACOBI.json  (+17 more)
src/convergence/: absolute.cu  combined_rel_ini_abs.cu  convergence.cu  relative_ini.cu  relative_max.cu
src/cycles/: cg_cycle.cu  cg_flex_cycle.cu  convergence_analysis.cu  cycle.cu  f_cycle.cu  fixed_cycle.cu  v_cycle.cu  w_cycle.cu
src/distributed/: comms_mpi_gpudirect.cu  comms_mpi_hostbuffer_stream.cu  comms_visitors1.cu  comms_visitors2.cu  comms_visitors3.cu  comms_visitors4.cu  distributed_arranger.cu  distributed_comms.cu  distributed_io.cu  distributed_manager.cu
src/eigen_configs/: ARNOLDI  INVERSE_FGMRES
src/eigensolvers/: arnoldi_eigensolver.cu  eigensolver.cu  eigensolvers.cu  eigenvector_solver.cu  jacobi_davidson_eigensolver.cu  lanczos_eigensolver.cu  lobpcg_eigensolver.cu  multivector_operations.cu  qr.cu  single_iteration_eigensolver.cu  subspace_iteration_eigensolver.cu
src/energymin/: energymin_amg_level.cu
src/matrix_coloring/: coloring_utils.cu  greedy_min_max_2ring.cu  greedy_recolor.cu  locally_downwind.cu  matrix_coloring.cu  min_max.cu  min_max_2ring.cu  multi_hash.cu  parallel_greedy.cu  round_robin.cu  serial_greedy_bfs.cu  uniform.cu
src/operators/: deflated_multiply_operator.cu  pagerank_operator.cu  shifted_operator.cu  (+2 more)
tests/: CMakeLists.txt
(+823 files in other folders)
